source/puppet/4.2/man/parser.md
---
layout: default
built_from_commit: e49293167c2a4753e3db51df5585478e3d8c8877
title: 'Man Page: puppet parser'
canonical: /puppet/latest/reference/man/parser.html
---

<div class='mp'>
<h2 id="NAME">NAME</h2>
<p class="man-name">
  <code>puppet-parser</code> - <span class="man-whatis">Interact directly with the parser.</span>
</p>

<h2 id="SYNOPSIS">SYNOPSIS</h2>

<p>puppet parser <var>action</var></p>

<h2 id="OPTIONS">OPTIONS</h2>

<p>Note that any setting that's valid in the configuration
file is also a valid long argument, although it may or may not be
relevant to the present action. For example, <code>server</code> and <code>run_mode</code> are valid
settings, so you can specify <code>--server &lt;servername></code>, or
<code>--run_mode &lt;runmode></code> as an argument.</p>

<p>See the configuration file documentation at
<a href="http://docs.puppetlabs.com/references/stable/configuration.html" data-bare-link="true">http://docs.puppetlabs.com/references/stable/configuration.html</a> for the
full list of acceptable parameters. A commented list of all
configuration options can also be generated by running puppet with
<code>--genconfig</code>.</p>

<dl>
<dt>--render-as FORMAT</dt><dd>The format in which to render output. The most common formats are <code>json</code>,
<code>s</code> (string), <code>yaml</code>, and <code>console</code>, but other options such as <code>dot</code> are
sometimes available.</dd>
<dt>--verbose</dt><dd>Whether to log verbosely.</dd>
<dt class="flush">--debug</dt><dd>Whether to log debug information.</dd>
</dl>


<h2 id="ACTIONS">ACTIONS</h2>

<dl>
<dt><code>dump</code> - Outputs a dump of the internal parse tree for debugging</dt><dd><p><code>SYNOPSIS</code></p>

<p>puppet parser dump [--e <var>source</var>]
[--[no-]validate]
-e <var>source</var>| [<var>manifest</var> ...]</p>

<p><code>DESCRIPTION</code></p>

<p>This action parses and validates the Puppet DSL syntax without compiling a catalog
or syncing any resources.</p>

<p>The command accepts one or more manifests (.pp) files, or an -e followed by the puppet
source text.
If no arguments are given, the stdin is read (unless it is attached to a terminal)</p>

<p>The output format of the dumped tree is intended for debugging purposes and is
not API, it may change from time to time.</p>

<p><code>OPTIONS</code>
<var>--e &lt;source</var>> -
dump one source expression given on the command line.</p>

<p><var>--[no-]validate</var> -
Whether or not to validate the parsed result, if no-validate only syntax errors are reported</p>

<p><code>RETURNS</code></p>

<p>A dump of the resulting AST model unless there are syntax or validation errors.</p></dd>
<dt><code>validate</code> - Validate the syntax of one or more Puppet manifests.</dt><dd><p><code>SYNOPSIS</code></p>

<p>puppet parser validate [<var>manifest</var>] [<var>manifest</var> ...]</p>

<p><code>DESCRIPTION</code></p>

<p>This action validates Puppet DSL syntax without compiling a catalog or
syncing any resources. If no manifest files are provided, it will
validate the default site manifest.</p>

<p>When validating multiple issues per file are reported up
to the settings of max_error, and max_warnings. The processing stops
after having reported issues for the first encountered file with errors.</p>

<p><code>RETURNS</code></p>

<p>Nothing, or the first syntax error encountered.</p></dd>
</dl>


<h2 id="EXAMPLES">EXAMPLES</h2>

<p><code>validate</code></p>

<p>Validate the default site manifest at /etc/puppetlabs/puppet/manifests/site.pp:</p>

<p>$ puppet parser validate</p>

<p>Validate two arbitrary manifest files:</p>

<p>$ puppet parser validate init.pp vhost.pp</p>

<p>Validate from STDIN:</p>

<p>$ cat init.pp | puppet parser validate</p>

<h2 id="COPYRIGHT-AND-LICENSE">COPYRIGHT AND LICENSE</h2>

<p>Copyright 2014 by Puppet Labs
Apache 2 license; see COPYING</p>

</div>
