source/puppet/5.5/man/parser.md
---
layout: default
built_from_commit: 28833b083d1ed4cd328af45fbe26cfa00679c6b3
title: 'Man Page: puppet parser'
canonical: "/puppet/latest/man/parser.html"
---

<div class='mp'>
<h2 id="NAME">NAME</h2>
<p class="man-name">
  <code>puppet-parser</code> - <span class="man-whatis">Interact directly with the parser.</span>
</p>

<h2 id="SYNOPSIS">SYNOPSIS</h2>

<p>puppet parser <var>action</var></p>

<h2 id="OPTIONS">OPTIONS</h2>

<p>Note that any setting that's valid in the configuration
file is also a valid long argument, although it may or may not be
relevant to the present action. For example, <code>server</code> and <code>run_mode</code> are valid
settings, so you can specify <code>--server &lt;servername></code>, or
<code>--run_mode &lt;runmode></code> as an argument.</p>

<p>See the configuration file documentation at
<a href="https://docs.puppetlabs.com/puppet/latest/reference/configuration.html" data-bare-link="true">https://docs.puppetlabs.com/puppet/latest/reference/configuration.html</a> for the
full list of acceptable parameters. A commented list of all
configuration options can also be generated by running puppet with
<code>--genconfig</code>.</p>

<dl>
<dt>--render-as FORMAT</dt><dd>The format in which to render output. The most common formats are <code>json</code>,
<code>s</code> (string), <code>yaml</code>, and <code>console</code>, but other options such as <code>dot</code> are
sometimes available.</dd>
<dt>--verbose</dt><dd>Whether to log verbosely.</dd>
<dt class="flush">--debug</dt><dd>Whether to log debug information.</dd>
</dl>


<h2 id="ACTIONS">ACTIONS</h2>

<ul>
<li><p><code>dump</code> - Outputs a dump of the internal parse tree for debugging:
<code>SYNOPSIS</code></p>

<p>puppet parser dump [--e <var>source</var>]
[--[no-]validate]
[--format <var>old, pn, or json</var>]
[--pretty]
[--format <var>old|pn|json</var>] [--pretty] { -e <var>source</var> | [<var>templates</var> ...] }</p>

<p><code>DESCRIPTION</code></p>

<p>This action parses and validates the Puppet DSL syntax without compiling a catalog
or syncing any resources.</p>

<p>The output format can be controlled using the --format <var>old|pn|json</var> where:</p>

<ul>
<li>'old' is the default, but now deprecated format which is not API.</li>
<li>'pn' is the Puppet Extended S-Expression Notation.</li>
<li>'json' outputs the same graph as 'pn' but with JSON syntax.</li>
</ul>


<p>The output will be "pretty printed" when the option --pretty is given together with --format 'pn' or 'json'.
This option has no effect on the 'old' format.</p>

<p>The command accepts one or more manifests (.pp) files, or an -e followed by the puppet
source text.
If no arguments are given, the stdin is read (unless it is attached to a terminal)</p>

<p>The output format of the dumped tree is intended for debugging purposes and is
not API, it may change from time to time.</p>

<p><code>OPTIONS</code>
<var>--e &lt;source</var>> -
dump one source expression given on the command line.</p>

<p><var>--format &lt;old, pn, or json</var>> -
Get result in 'old' (deprecated format), 'pn' (new format), or 'json' (new format in JSON).</p>

<p><var>--pretty</var> -
Pretty print output. Only applicable together with --format pn or json</p>

<p><var>--[no-]validate</var> -
Whether or not to validate the parsed result, if no-validate only syntax errors are reported</p>

<p><code>RETURNS</code></p>

<p>A dump of the resulting AST model unless there are syntax or validation errors.</p></li>
<li><p><code>validate</code> - Validate the syntax of one or more Puppet manifests.:
<code>SYNOPSIS</code></p>

<p>puppet parser validate [<var>manifest</var>] [<var>manifest</var> ...]</p>

<p><code>DESCRIPTION</code></p>

<p>This action validates Puppet DSL syntax without compiling a catalog or
syncing any resources. If no manifest files are provided, it will
validate the default site manifest.</p>

<p>When validating multiple issues per file are reported up
to the settings of max_error, and max_warnings. The processing stops
after having reported issues for the first encountered file with errors.</p>

<p><code>RETURNS</code></p>

<p>Nothing, or the first syntax error encountered.</p></li>
</ul>


<h2 id="EXAMPLES">EXAMPLES</h2>

<p><code>validate</code></p>

<p>Validate the default site manifest at /etc/puppetlabs/puppet/manifests/site.pp:</p>

<p>$ puppet parser validate</p>

<p>Validate two arbitrary manifest files:</p>

<p>$ puppet parser validate init.pp vhost.pp</p>

<p>Validate from STDIN:</p>

<p>$ cat init.pp | puppet parser validate</p>

<h2 id="COPYRIGHT-AND-LICENSE">COPYRIGHT AND LICENSE</h2>

<p>Copyright 2014 by Puppet Inc.
Apache 2 license; see COPYING</p>

</div>
